[project]
authors = [{name = "Yirui Liang", email = "41648750+liangyirui@users.noreply.github.com"}]
description = "Add a short description here"
name = "rest-api-hackerrank"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["requests>=2.32.3,<3"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
rest_api_hackerrank = { path = ".", editable = true }

[tool.pixi.tasks]
